Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
 
       </header>
       <section>
-        <h1>
+        <p>Hola Nacho</p>
+
+<h1>
 <a name="ngs-data-analysis-course" class="anchor" href="#ngs-data-analysis-course"><span class="octicon octicon-link"></span></a>NGS Data Analysis Course</h1>
+
+<p>Day 1</p>
 
 <h3>
 <a name="introduction-to-linux-systems" class="anchor" href="#introduction-to-linux-systems"><span class="octicon octicon-link"></span></a>Introduction to Linux systems</h3>
