--- a/index.html
+++ b/index.html
@@ -27,18 +27,17 @@
 
       </header>
       <section>
-        <p>Hola Nacho</p>
-
-<h1>
+        <h1>
 <a name="ngs-data-analysis-course" class="anchor" href="#ngs-data-analysis-course"><span class="octicon octicon-link"></span></a>NGS Data Analysis Course</h1>
 
-<p>Day 1</p>
-
-<h3>
-<a name="introduction-to-linux-systems" class="anchor" href="#introduction-to-linux-systems"><span class="octicon octicon-link"></span></a>Introduction to Linux systems</h3>
+<h2>
+<a name="day-1" class="anchor" href="#day-1"><span class="octicon octicon-link"></span></a>Day 1</h2>
 
 <h3>
 <a name="introduction-to-ngs-technologies" class="anchor" href="#introduction-to-ngs-technologies"><span class="octicon octicon-link"></span></a>Introduction to NGS technologies</h3>
+
+<h3>
+<a name="introduction-to-linux-systems" class="anchor" href="#introduction-to-linux-systems"><span class="octicon octicon-link"></span></a>Introduction to Linux systems</h3>
 
 <h3>
 <a name="quality-control-for-ngs-raw-data" class="anchor" href="#quality-control-for-ngs-raw-data"><span class="octicon octicon-link"></span></a>Quality control for NGS raw data</h3>
@@ -48,6 +47,9 @@
 <a href="COURSE_MATERIALS/rna-seq/slides/slides.pdf">Slides</a> - <a href="COURSE_MATERIALS/rna-seq/examples/example.html">Practical exercise 1: fastQC</a> - Practical exercise 2: cutadapt</li>
 </ul><h3>
 <a name="mapping-reads-to-a-reference-genome" class="anchor" href="#mapping-reads-to-a-reference-genome"><span class="octicon octicon-link"></span></a>Mapping reads to a reference genome</h3>
+
+<h2>
+<a name="day-2" class="anchor" href="#day-2"><span class="octicon octicon-link"></span></a>Day 2</h2>
 
 <h3>
 <a name="visualization-of-ngs-data" class="anchor" href="#visualization-of-ngs-data"><span class="octicon octicon-link"></span></a>Visualization of NGS data</h3>
@@ -64,6 +66,9 @@
 
 <h3>
 <a name="association-studies" class="anchor" href="#association-studies"><span class="octicon octicon-link"></span></a>Association studies</h3>
+
+<h2>
+<a name="day-3" class="anchor" href="#day-3"><span class="octicon octicon-link"></span></a>Day 3</h2>
 
 <h3>
 <a name="rna-seq-data-processing" class="anchor" href="#rna-seq-data-processing"><span class="octicon octicon-link"></span></a>RNA-Seq data processing</h3>
