--- a/index.html
+++ b/index.html
@@ -30,16 +30,19 @@
         <h1>
 <a name="ngs-data-analysis-course" class="anchor" href="#ngs-data-analysis-course"><span class="octicon octicon-link"></span></a>NGS Data Analysis Course</h1>
 
-<h2>
-<a name="day-1" class="anchor" href="#day-1"><span class="octicon octicon-link"></span></a>Day 1</h2>
-
-<h3>
-<a name="introduction-to-ngs-technologies" class="anchor" href="#introduction-to-ngs-technologies"><span class="octicon octicon-link"></span></a>Introduction to NGS technologies</h3>
+<p>Day 1</p>
 
 <h3>
 <a name="introduction-to-linux-systems" class="anchor" href="#introduction-to-linux-systems"><span class="octicon octicon-link"></span></a>Introduction to Linux systems</h3>
 
-<h3>
+<ul>
+<li><a href="COURSE_MATERIALS/alignment/slides/presentation_mda14.pdf">Slides</a></li>
+</ul><h3>
+<a name="introduction-to-ngs-technologies" class="anchor" href="#introduction-to-ngs-technologies"><span class="octicon octicon-link"></span></a>Introduction to NGS technologies</h3>
+
+<ul>
+<li><a href="COURSE_MATERIALS/alignment/slides/ngs_introduction_mda14.pdf">Slides</a></li>
+</ul><h3>
 <a name="quality-control-for-ngs-raw-data" class="anchor" href="#quality-control-for-ngs-raw-data"><span class="octicon octicon-link"></span></a>Quality control for NGS raw data</h3>
 
 <ul>
@@ -48,10 +51,11 @@
 </ul><h3>
 <a name="mapping-reads-to-a-reference-genome" class="anchor" href="#mapping-reads-to-a-reference-genome"><span class="octicon octicon-link"></span></a>Mapping reads to a reference genome</h3>
 
-<h2>
-<a name="day-2" class="anchor" href="#day-2"><span class="octicon octicon-link"></span></a>Day 2</h2>
-
-<h3>
+<ul>
+<li>
+<a href="COURSE_MATERIALS/alignment/slides/ngs-read-mapping-imedina-mda14.pdf">Slides</a> - <a href="http://ngscourse.github.io/COURSE_MATERIALS/alignment/example/example.html">Practical exercise</a>
+</li>
+</ul><h3>
 <a name="visualization-of-ngs-data" class="anchor" href="#visualization-of-ngs-data"><span class="octicon octicon-link"></span></a>Visualization of NGS data</h3>
 
 <ul>
@@ -66,9 +70,6 @@
 
 <h3>
 <a name="association-studies" class="anchor" href="#association-studies"><span class="octicon octicon-link"></span></a>Association studies</h3>
-
-<h2>
-<a name="day-3" class="anchor" href="#day-3"><span class="octicon octicon-link"></span></a>Day 3</h2>
 
 <h3>
 <a name="rna-seq-data-processing" class="anchor" href="#rna-seq-data-processing"><span class="octicon octicon-link"></span></a>RNA-Seq data processing</h3>
