--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <h1>
 <a name="ngs-data-analysis-course" class="anchor" href="#ngs-data-analysis-course"><span class="octicon octicon-link"></span></a>NGS Data Analysis Course</h1>
 
-<p>Day 1</p>
+<h2>
+<a name="day-1" class="anchor" href="#day-1"><span class="octicon octicon-link"></span></a>Day 1</h2>
 
 <h3>
 <a name="introduction-to-linux-systems" class="anchor" href="#introduction-to-linux-systems"><span class="octicon octicon-link"></span></a>Introduction to Linux systems</h3>
@@ -47,7 +48,8 @@
 
 <ul>
 <li>
-<a href="COURSE_MATERIALS/rna-seq/slides/slides.pdf">Slides</a> - <a href="COURSE_MATERIALS/rna-seq/examples/example.html">Practical exercise 1: fastQC</a> - Practical exercise 2: cutadapt</li>
+<a href="COURSE_MATERIALS/quality_control/slides/slides.pdf">Slides</a> - <a href="COURSE_MATERIALS/quality_control/examples/example.html">Practical exercise</a>
+</li>
 </ul><h3>
 <a name="mapping-reads-to-a-reference-genome" class="anchor" href="#mapping-reads-to-a-reference-genome"><span class="octicon octicon-link"></span></a>Mapping reads to a reference genome</h3>
 
@@ -55,7 +57,10 @@
 <li>
 <a href="COURSE_MATERIALS/alignment/slides/ngs-read-mapping-imedina-mda14.pdf">Slides</a> - <a href="http://ngscourse.github.io/COURSE_MATERIALS/alignment/example/example.html">Practical exercise</a>
 </li>
-</ul><h3>
+</ul><h2>
+<a name="day-2" class="anchor" href="#day-2"><span class="octicon octicon-link"></span></a>Day 2</h2>
+
+<h3>
 <a name="visualization-of-ngs-data" class="anchor" href="#visualization-of-ngs-data"><span class="octicon octicon-link"></span></a>Visualization of NGS data</h3>
 
 <ul>
@@ -67,6 +72,9 @@
 
 <h3>
 <a name="variant-annotation" class="anchor" href="#variant-annotation"><span class="octicon octicon-link"></span></a>Variant annotation</h3>
+
+<h2>
+<a name="day-3" class="anchor" href="#day-3"><span class="octicon octicon-link"></span></a>Day 3</h2>
 
 <h3>
 <a name="association-studies" class="anchor" href="#association-studies"><span class="octicon octicon-link"></span></a>Association studies</h3>
