Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <h1>
 <a name="ngs-data-analysis-course" class="anchor" href="#ngs-data-analysis-course"><span class="octicon octicon-link"></span></a>NGS Data Analysis Course</h1>
 
+<p><strong>Example data</strong> for the exercises are available <a href="https://github.com/ngscourse/ngscourse.github.io/tree/master/COURSE_EXAMPLE_DATA">HERE</a></p>
+
 <h2>
 <a name="day-1" class="anchor" href="#day-1"><span class="octicon octicon-link"></span></a>Day 1</h2>
 
