--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
         <h1>
 <a name="ngs-data-analysis-course" class="anchor" href="#ngs-data-analysis-course"><span class="octicon octicon-link"></span></a>NGS Data Analysis Course</h1>
 
-<p><strong>Example data</strong> for the exercises are available <a href="https://github.com/ngscourse/ngscourse.github.io/tree/master/COURSE_EXAMPLE_DATA">HERE</a></p>
-
 <h2>
 <a name="day-1" class="anchor" href="#day-1"><span class="octicon octicon-link"></span></a>Day 1</h2>
 
@@ -50,7 +48,7 @@
 
 <ul>
 <li>
-<a href="COURSE_MATERIALS/quality_control/slides/slides.pdf">Slides</a> - <a href="COURSE_MATERIALS/quality_control/example/example.html">Practical exercise</a>
+<a href="COURSE_MATERIALS/quality_control/slides/slides.pdf">Slides</a> - <a href="COURSE_MATERIALS/quality_control/example/example.html">Practical exercise</a> - <a href="COURSE_EXAMPLE_DATA/f000_raw_mirna.fastq">Data</a>
 </li>
 </ul><h3>
 <a name="mapping-reads-to-a-reference-genome" class="anchor" href="#mapping-reads-to-a-reference-genome"><span class="octicon octicon-link"></span></a>Mapping reads to a reference genome</h3>
