Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -70,10 +70,18 @@
 </ul><h3>
 <a name="variant-calling" class="anchor" href="#variant-calling"><span class="octicon octicon-link"></span></a>Variant calling</h3>
 
-<h3>
+<ul>
+<li>
+<a href="COURSE_MATERIALS/variant_calling/slides/2014-Cambridge_variant_calling.pdf">Slides</a> || <a href="COURSE_MATERIALS/variant_calling/example/010_example.html">Practical exercise 1</a> || <a href="COURSE_MATERIALS/variant_calling/example/020_example.html">Practical exercise 2</a> || <a href="COURSE_MATERIALS/variant_calling/example/030_example.html">Practical exercise 3</a>
+</li>
+</ul><h3>
 <a name="variant-annotation" class="anchor" href="#variant-annotation"><span class="octicon octicon-link"></span></a>Variant annotation</h3>
 
-<h2>
+<ul>
+<li>
+<a href="COURSE_MATERIALS/variant_annotation/slides/2014-Cambridge_variant_annotation.pdf">Slides</a> || <a href="COURSE_MATERIALS/variant_annotation/example/010_example.html">Practical exercise 1</a>
+</li>
+</ul><h2>
 <a name="day-3" class="anchor" href="#day-3"><span class="octicon octicon-link"></span></a>Day 3</h2>
 
 <h3>
