--- a/index.html
+++ b/index.html
@@ -1,106 +1,36 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>NGS by ngscourse</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="header">NGS</h1>
-        <p class="header">data analysis course</p>
-
-
-
-        <ul>
-          <li><a class="buttons github" href="https://github.com/ngscourse">GitHub Profile</a></li>
-        </ul>
-
-      </header>
-      <section>
-        <h1>
-<a name="ngs-data-analysis-course" class="anchor" href="#ngs-data-analysis-course"><span class="octicon octicon-link"></span></a>NGS Data Analysis Course</h1>
-
-<h2>
-<a name="day-1" class="anchor" href="#day-1"><span class="octicon octicon-link"></span></a>Day 1</h2>
-
-<h3>
-<a name="introduction-to-linux-systems" class="anchor" href="#introduction-to-linux-systems"><span class="octicon octicon-link"></span></a>Introduction to Linux systems</h3>
-
+<h1 id="ngs-data-analysis-course">NGS Data Analysis Course</h1>
+<h2 id="day-1">Day 1</h2>
+<h3 id="introduction-to-linux-systems">Introduction to Linux systems</h3>
 <ul>
 <li><a href="COURSE_MATERIALS/alignment/slides/presentation_mda14.pdf">Slides</a></li>
-</ul><h3>
-<a name="introduction-to-ngs-technologies" class="anchor" href="#introduction-to-ngs-technologies"><span class="octicon octicon-link"></span></a>Introduction to NGS technologies</h3>
-
+</ul>
+<h3 id="introduction-to-ngs-technologies">Introduction to NGS technologies</h3>
 <ul>
 <li><a href="COURSE_MATERIALS/alignment/slides/ngs_introduction_mda14.pdf">Slides</a></li>
-</ul><h3>
-<a name="quality-control-for-ngs-raw-data" class="anchor" href="#quality-control-for-ngs-raw-data"><span class="octicon octicon-link"></span></a>Quality control for NGS raw data</h3>
-
+</ul>
+<h3 id="quality-control-for-ngs-raw-data">Quality control for NGS raw data</h3>
 <ul>
-<li>
-<a href="COURSE_MATERIALS/quality_control/slides/slides.pdf">Slides</a> - <a href="COURSE_MATERIALS/quality_control/example/example.html">Practical exercise</a> - <a href="COURSE_EXAMPLE_DATA/f000_raw_mirna.fastq">Data</a>
-</li>
-</ul><h3>
-<a name="mapping-reads-to-a-reference-genome" class="anchor" href="#mapping-reads-to-a-reference-genome"><span class="octicon octicon-link"></span></a>Mapping reads to a reference genome</h3>
-
+<li><a href="COURSE_MATERIALS/quality_control/slides/slides.pdf">Slides</a> - <a href="COURSE_MATERIALS/quality_control/example/example.html">Practical exercise</a> - <a href="COURSE_EXAMPLE_DATA/f000_raw_mirna.fastq">Data</a></li>
+</ul>
+<h3 id="mapping-reads-to-a-reference-genome">Mapping reads to a reference genome</h3>
 <ul>
-<li>
-<a href="COURSE_MATERIALS/alignment/slides/ngs-read-mapping-imedina-mda14.pdf">Slides</a> - <a href="http://ngscourse.github.io/COURSE_MATERIALS/alignment/example/example.html">Practical exercise</a>
-</li>
-</ul><h2>
-<a name="day-2" class="anchor" href="#day-2"><span class="octicon octicon-link"></span></a>Day 2</h2>
-
-<h3>
-<a name="visualization-of-ngs-data" class="anchor" href="#visualization-of-ngs-data"><span class="octicon octicon-link"></span></a>Visualization of NGS data</h3>
-
+<li><a href="COURSE_MATERIALS/alignment/slides/ngs-read-mapping-imedina-mda14.pdf">Slides</a> - <a href="http://ngscourse.github.io/COURSE_MATERIALS/alignment/example/example.html">Practical exercise</a></li>
+</ul>
+<h2 id="day-2">Day 2</h2>
+<h3 id="visualization-of-ngs-data">Visualization of NGS data</h3>
 <ul>
-<li>
-<a href="COURSE_MATERIALS/visualization/slides/2014-Cambridge_visualisation.pdf">Slides</a> || <a href="COURSE_MATERIALS/visualization/example/010_example.html">Practical exercise 1</a> || <a href="COURSE_MATERIALS/visualization/example/020_example.html">Practical exercise 2</a>
-</li>
-</ul><h3>
-<a name="variant-calling" class="anchor" href="#variant-calling"><span class="octicon octicon-link"></span></a>Variant calling</h3>
-
+<li><a href="COURSE_MATERIALS/visualization/slides/2014-Cambridge_visualisation.pdf">Slides</a> || <a href="COURSE_MATERIALS/visualization/example/010_example.html">Practical exercise 1</a> || <a href="COURSE_MATERIALS/visualization/example/020_example.html">Practical exercise 2</a></li>
+</ul>
+<h3 id="variant-calling">Variant calling</h3>
 <ul>
-<li>
-<a href="COURSE_MATERIALS/variant_calling/slides/2014-Cambridge_variant_calling.pdf">Slides</a> || <a href="COURSE_MATERIALS/variant_calling/example/010_example.html">Practical exercise 1</a> || <a href="COURSE_MATERIALS/variant_calling/example/020_example.html">Practical exercise 2</a> || <a href="COURSE_MATERIALS/variant_calling/example/030_example.html">Practical exercise 3</a>
-</li>
-</ul><h3>
-<a name="variant-annotation" class="anchor" href="#variant-annotation"><span class="octicon octicon-link"></span></a>Variant annotation</h3>
-
+<li><a href="COURSE_MATERIALS/variant_calling/slides/2014-Cambridge_variant_calling.pdf">Slides</a> || <a href="COURSE_MATERIALS/variant_calling/example/010_example.html">Practical exercise 1</a> || <a href="COURSE_MATERIALS/variant_calling/example/020_example.html">Practical exercise 2</a> || <a href="COURSE_MATERIALS/variant_calling/example/030_example.html">Practical exercise 3</a></li>
+</ul>
+<h3 id="variant-annotation">Variant annotation</h3>
 <ul>
-<li>
-<a href="COURSE_MATERIALS/variant_annotation/slides/2014-Cambridge_variant_annotation.pdf">Slides</a> || <a href="COURSE_MATERIALS/variant_annotation/example/010_example.html">Practical exercise 1</a>
-</li>
-</ul><h2>
-<a name="day-3" class="anchor" href="#day-3"><span class="octicon octicon-link"></span></a>Day 3</h2>
-
-<h3>
-<a name="association-studies" class="anchor" href="#association-studies"><span class="octicon octicon-link"></span></a>Association studies</h3>
-
-<h3>
-<a name="rna-seq-data-processing" class="anchor" href="#rna-seq-data-processing"><span class="octicon octicon-link"></span></a>RNA-Seq data processing</h3>
-
-<h3>
-<a name="rna-seq-data-analysis" class="anchor" href="#rna-seq-data-analysis"><span class="octicon octicon-link"></span></a>RNA-Seq data analysis</h3>
-
-<h3>
-<a name="functional-analysis" class="anchor" href="#functional-analysis"><span class="octicon octicon-link"></span></a>Functional analysis</h3>
-      </section>
-      <footer>
-        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
-  </body>
-</html>
+<li><a href="COURSE_MATERIALS/variant_annotation/slides/2014-Cambridge_variant_annotation.pdf">Slides</a> || <a href="COURSE_MATERIALS/variant_annotation/example/010_example.html">Practical exercise 1</a></li>
+</ul>
+<h2 id="day-3">Day 3</h2>
+<h3 id="association-studies">Association studies</h3>
+<h3 id="rna-seq-data-processing">RNA-Seq data processing</h3>
+<h3 id="rna-seq-data-analysis">RNA-Seq data analysis</h3>
+<h3 id="functional-analysis">Functional analysis</h3>
