--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <ul>
 <li>
-<a href="COURSE_MATERIALS/visualization/slides/2014-Cambridge_visualisation.pdf">Slides</a> || <a href="COURSE_MATERIALS/visualization/example/010_example.html">Practical exercise 1</a> || <a href="COURSE_MATERIALS/visualization/example/020_example.html">Practical exercise 2</a>
+<a href="ngscourse.github.io/COURSE_MATERIALS/visualization/slides/2014-Cambridge_visualisation.pdf">Slides</a> || <a href="COURSE_MATERIALS/visualization/example/010_example.html">Practical exercise 1</a> || <a href="COURSE_MATERIALS/visualization/example/020_example.html">Practical exercise 2</a>
 </li>
 <li><a href="https://github.com/mbleda/ngscourse.github.io/blob/master/COURSE_MATERIALS/visualization/slides/2014-Cambridge_visualisation.pdf">https://github.com/mbleda/ngscourse.github.io/blob/master/COURSE_MATERIALS/visualization/slides/2014-Cambridge_visualisation.pdf</a></li>
 </ul><h3>
